# phpantom_lsp

./: Cargo.toml  README.md  config-schema.json
.github/workflows/: release.yml
benches/: custom_builder.rs  laravel_completion.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  SETUP.md  todo.md
docs/todo/: actions.md  blade.md  bugs.md  completion.md  diagnostics.md  eager-resolution.md  external-stubs.md  indexing.md  laravel.md  lsp-features.md  performance.md  refactor.md  type-inference.md
examples/: demo.php
examples/laravel/: README.md  assertions.php
src/: analyse.rs  atom.rs  call_args.rs  ci_map.rs  classmap_scanner.rs  code_lens.rs  composer.rs  config.rs  document_links.rs  document_symbols.rs  fix.rs  folding.rs  formatting.rs  framework.rs  inheritance.rs  lib.rs  main.rs  names.rs  php_type.rs  reference_index.rs  resolution.rs  selection_range.rs  semantic_tokens.rs  server.rs  signature_help.rs  signature_help_tests.rs  stub_patches.rs  subject_extraction.rs  subject_extraction_tests.rs  type_hierarchy.rs  types.rs  util.rs  workspace_symbols.rs
src/blade/: preprocessor.rs
src/code_actions/: change_visibility.rs  convert_switch_to_match.rs  convert_to_arrow_function.rs  convert_to_closure.rs  convert_to_instance_variable.rs  cursor_context.rs  extract_constant.rs  extract_function.rs  extract_interface.rs  extract_variable.rs  generate_constructor.rs  generate_getter_setter.rs  generate_property_hooks.rs  implement_methods.rs  import_class.rs  inline_variable.rs  mod.rs  promote_constructor_param.rs  remove_unused_import.rs  replace_deprecated.rs  simplify_null.rs  update_docblock.rs
src/completion/: array_callable.rs  builder.rs  call_resolution.rs  eloquent_string.rs  eloquent_string_tests.rs  handler.rs  laravel_route_controller.rs  mod.rs  named_args.rs  resolver.rs
src/definition/: implementation.rs  resolve.rs
src/diagnostics/: argument_count.rs  class_name_mismatch.rs  deprecated.rs  helpers.rs  invalid_class_kind.rs  mod.rs  namespace_mismatch.rs  property_type_errors.rs  return_type_errors.rs  syntax_errors.rs  type_errors.rs  undefined_variables.rs  unknown_classes.rs  unknown_functions.rs  unused_imports.rs  unused_variables.rs
src/docblock/: parser.rs  tags.rs  type_strings.rs  virtual_members.rs
src/highlight/: mod.rs
src/hover/: formatting.rs  mod.rs  tests.rs
src/parser/: ast_update.rs  classes.rs  error_format.rs  functions.rs  mod.rs  use_statements.rs
src/references/: mod.rs  tests.rs
src/rename/: mod.rs  tests.rs
src/scope_collector/: mod.rs  tests.rs
src/symbol_map/: docblock.rs  extraction.rs  mod.rs  tests.rs
src/virtual_members/: mod.rs  phpdoc.rs  tests.rs
tests/fixtures/: blade_regression_3.blade.php  blade_regression_4.blade.php
tests/integration/: blade_regression.rs  classmap_scanner.rs  code_action_convert_switch_to_match.rs  code_action_extract_interface.rs  code_lens.rs  completion_array_access_generics.rs  completion_array_shapes.rs  completion_attributes.rs  completion_class_name_context.rs  completion_class_names.rs  completion_compound_narrowing.rs  completion_cross_file.rs  completion_foreach_collections.rs  completion_generics.rs  completion_laravel.rs  completion_laravel_aliases.rs  completion_laravel_auth.rs  completion_magic_methods.rs  completion_mixins.rs  completion_namespaced_functions.rs  completion_non_composer_discovery.rs  (+30 more)
zed-extension/: Cargo.toml  extension.toml
(+76 files in other folders)
