[package]
name = "phpantom_lsp"
version = "0.8.0"
edition = "2024"
license = "MIT"
description = "Fast PHP language server with deep type intelligence. Generics, Laravel, PHPStan annotations. Ready in an instant."
repository = "https://github.com/AJenbo/phpantom_lsp"
documentation = "https://docs.rs/phpantom_lsp/latest/phpantom_lsp/"
readme = "README.md"
exclude = [".gitignore", ".github/*", "target/*"]

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.39", features = ["full"] }
mago-syntax = "=1.29.0"
mago-database = "=1.29.0"
mago-docblock = "=1.29.0"
mago-names = "=1.29.0"
mago-span = "=1.29.0"
mago-type-syntax = "=1.29.0"
mago-formatter = "=1.29.0"
mago-php-version = "=1.29.0"
mago-composer = "=1.29.0"
bumpalo = "3"
ignore = "0.4"
memchr = "2"
ustr = "1"
parking_lot = "0.12"
tempfile = "3"
toml = "1"
etcetera = "0.11"

[build-dependencies]
ureq = "3"
tar = "0.4"
flate2 = "1"

[dev-dependencies]
datatest-stable = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "fixture_runner"
harness = false

[[test]]
name = "assert_type_runner"
harness = false

[[bench]]
name = "completion"
harness = false

[[bench]]
name = "references"
harness = false

[[bench]]
name = "laravel_completion"
harness = false

[[bench]]
name = "custom_builder"
harness = false
